--- a/notas/app/views/parts/new.html.erb
+++ b/notas/app/views/parts/new.html.erb
@@ -3,7 +3,7 @@
 
 <%= render :partial => 'form' %>
 
-<%  link_to signature_parts_path(@signature, :ordinary=>@ordinary, :parent_id=>@parent), :class=>"button" do%>
+<%  link_to signature_parts_path(@signature, :ordinary=>@ordinary, :parent_id=>@parent), :class=>"pill button" do%>
   <span class="home icon"></span><span>Volver al listado</span>
 <%end%>
 
