migraciones apellidos y calificaciones

--- a/notas/app/views/layouts/application.html.erb
+++ b/notas/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= @title || "Gestor de notas para el curso #{@year_selected.to_s}" %></title>
   <%= stylesheet_link_tag 'scaffold', 'css3buttons' %>
-  
+  <%= javascript_include_tag :defaults  %>
 </head>
 <body>
     <div class="pagina">
