--- a/notas/app/views/students/_form.html.erb
+++ b/notas/app/views/students/_form.html.erb
@@ -15,7 +15,11 @@
     <%= f.label :name, 'Nombre' %><br />
     <%= f.text_field :name, :autocomplete=>'off' %>
   </p>
-    <p>
+  <p>
+    <%= f.label :surname, 'Apellidos' %><br/>
+    <%= f.text_field :surname %>
+  </p>
+  <p>
     <%= f.label :expedient, 'Expediente' %><br/>
     <%= f.text_field :expedient, :autocomplete=>'off' %>
   </p>
