--- a/notas/app/views/students/index.html.erb
+++ b/notas/app/views/students/index.html.erb
@@ -13,7 +13,7 @@
   <tr class="<%= cycle('impar', 'par') %>">
     <td><%=h student.login %></td>
     <td><%=h student.email %></td>
-    <td><%=h student.name %></td>
+    <td><%=h student.surname_name %></td>
     <td><%=h student.expedient %></td>
 
     <td class="botones">
