--- a/notas/app/views/teachers/_form.html.erb
+++ b/notas/app/views/teachers/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.label :name, 'Nombre' %><br />
     <%= f.text_field :name, :autocomplete=>'off' %>
   </p>
+  <p>
+    <%= f.label :surname, 'Apellidos' %><br/>
+    <%= f.text_field :surname %>
+  </p>
 <% end %>
   <p>
     <%= f.label :password, 'Contraseña' %><br />
