--- a/notas/app/views/teachers/index.html.erb
+++ b/notas/app/views/teachers/index.html.erb
@@ -12,7 +12,7 @@
   <tr class="<%= cycle('impar', 'par') %>">
     <td><%=h teacher.login %></td>
     <td><%=h teacher.email %></td>
-    <td><%=h teacher.name %></td>
+    <td><%=h teacher.surname_name %></td>
     <td class="botones">
 
         <%if (current_user.is_a? Administrator)%>
