--- a/notas/app/views/users/new.html.erb
+++ b/notas/app/views/users/new.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :name %>
   </p>
   <p>
+    <%= f.label :surname, 'Apellidos' %><br/>
+    <%= f.text_field :surname %>
+  </p>
+  <p>
     <%= f.label :password, 'Contraseña' %><br/>
     <%= f.password_field :password %>
   </p>
